--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -2,10 +2,45 @@ body{
     margin: 0;
     background-color: #FFD7D7;
 }
+/* ---------- Header ------------ */
+#header{
+    display: flex;
+    background-color: #4E5166;
+    height: 80px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 70px;
+}
+#header__logo{
+    height: 100%;
+    position: relative;
+}
+.header__logo{
+    width: 200px;
+    top: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+}
+#header__profile{
+    display: flex;
+    justify-content: space-evenly;
+    width: 33%;
+}
+.header__messenger{
+    width: 25%;
+}
+#header__messenger,.header__profile{
+    font-size: 20px;
+    color: #4E5166;
+    background-color: #D9D9D9;
+    padding: 15px;
+    border-radius: 100%;
+}
 
-/* ---------- Login ------------ */
+/* --------- Fin Header --------- */
+/* ---------- Login ------------- */
 .login{
-    width: 100%;
+    /*width: 100%;*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,7 +75,7 @@ body{
 }
 .login__body-log{
     width: 85%;
-    margin: 5% 0 5% 0;
+    margin: 5% 0;
     background: #FD2D01;
     border-radius: 35px;
     overflow: hidden;
@@ -73,19 +108,12 @@ body{
 }
 .login__body-register{
     width: 85%;
-    margin: 5% 0 5% 0;
+    margin: 5% 0;
     background: #FD2D01;
     border-radius: 35px;
     overflow: hidden;
 }
-#sign__up-form{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 80%;
-    width: 50%;
-}
-#register-form{
+#sign__up-form,#register-form{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
