--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -4,8 +4,68 @@
     align-items: center;
     margin-top: 20px;
 }
+.post{
+    display: block;
+}
 .home__post{
     background-color: #D9D9D9;
     width: 65%;
-    margin: 20px 0 ;
+    margin: 20px 0;
+    border-radius: 35px;
+}
+.post__header{
+    display: flex;
+    align-items: center;
+}
+.post__header img{
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    margin: 20px;
+}
+.post__header i{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    margin: 20px;
+    color:#D9D9D9;
+    background-color: #4E5166;
+    font-size: 20px;
+}
+.post__pseudo{
+    font-size: 20px;
+}
+.post__description{
+    margin: 0 20px 10px 20px;
+    font-size: 20px;
+}
+.post__img{
+    margin: 20px 0 10px 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.post__img img{
+    max-width: 90%;
+    max-height: 400px;
+}
+.post__footer{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 60px;
+    font-size: 30px;
+}
+.post__like{
+    width: 50%;
+    height: 100%;
+}
+
+.post__comment{
+    width: 50%;
+    height: 100%;
 }
