--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -17,11 +17,12 @@
     display: flex;
     align-items: center;
 }
-.post__header img{
+.post__header img,.comment__header img,.create__post-header img{
     width: 50px;
     height: 50px;
     border-radius: 100%;
     margin: 20px;
+    object-fit: cover;
 }
 .post__header i{
     display: flex;
@@ -63,9 +64,42 @@
 .post__like{
     width: 50%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 2px inset ;
+    border-top: 2px inset;
 }
-
-.post__comment{
+.post__comment-icone{
     width: 50%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 2px inset;
+    border-left: 2px inset;
+    cursor: pointer;
+}
+.post__comment{
+    border-top: 2px inset;
+}
+.comment__post{
+    display: flex;
+}
+.comment__header{
+    width: 20%;
+    max-width: 95px;
+}
+.comment__like{
+    width: 20%;
+    max-width: 95px;
+    text-align: center;
+    margin-top: 20px;
+    font-size: 25px;
+}
+.comment__middle{
+    width: 100%;
+    background-color: #FFD7D7;
+    border-radius: 30px;
+    margin: 20px 0 20px 0;
 }
