--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -17,7 +17,7 @@
     display: flex;
     align-items: center;
 }
-.post__header img,.comment__header img,.create__post-header img{
+.create__comment-picture img,.post__header img,.comment__header img,.create__post-header img{
     width: 50px;
     height: 50px;
     border-radius: 100%;
@@ -102,4 +102,12 @@
     background-color: #FFD7D7;
     border-radius: 30px;
     margin: 20px 0 20px 0;
+    padding: 20px 15px;
+}
+.comment__middle-head{
+    display: flex;
+    justify-content: space-between;
+}
+.comment__middle-body{
+    margin-top: 15px;
 }
