--- a/frontend/src/styles/profile.css
+++ b/frontend/src/styles/profile.css
@@ -39,6 +39,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
 }
 .user__img i{
     font-size: 125px;
