--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -7,24 +7,34 @@
 .post{
     display: block;
 }
-.home__post{
+.home__post,.create__post{
     background-color: #D9D9D9;
     width: 65%;
     margin: 20px 0;
     border-radius: 35px;
 }
+.create__post{
+    display: flex;
+    flex-direction: row;
+}
+#create__post-form{
+    display: flex;
+}
+.create__post-body{
+    width: 100%;
+}
 .post__header{
     display: flex;
     align-items: center;
 }
-.create__comment-picture img,.post__header img,.comment__header img,.create__post-header img{
+.create__comment-header img,.create__comment-picture img,.post__header img,.comment__header img,.create__post-header img{
     width: 50px;
     height: 50px;
     border-radius: 100%;
     margin: 20px;
     object-fit: cover;
 }
-.post__header i,.comment__header i,.create__post-header i{
+.create__comment-header i,.post__header i,.comment__header i,.create__post-header i{
     display: flex;
     justify-content: center;
     align-items: center;
