--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -19,9 +19,12 @@
 }
 #create__post-form{
     display: flex;
+    height: 100%;
+    margin: 20px;
 }
 .create__post-body{
     width: 100%;
+    margin-block: auto;
 }
 .post__header{
     display: flex;
@@ -149,5 +152,35 @@
     height: 55px;
     margin: 20px;
     font-size: 30px;
+    cursor: pointer;
+}
+#post__form{
+    border-radius: 30px;
+    border: none;
+    font-size: 20px;
+    height: 80px;
+    width: 100%;
+    padding-left: 25px;
+}
+.post__preview-img{
+    margin: 20px 0 20px 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.post__preview-img img{
+    max-width: 90%;
+    max-height: 400px;
+}
+.button__img{
+    width: 5%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font-size: 25px;
+}
+.button__img label{
+    width: 100%;
+    margin: 20px;
     cursor: pointer;
 }
