--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -7,7 +7,16 @@
 .post{
     display: block;
 }
-.home__post,.create__post{
+.home__posts{
+    width: 65%;
+    margin: 20px 0;
+}
+.home__post{
+    background-color: #D9D9D9;
+    width: 100%;
+    border-radius: 35px;
+}
+.create__post{
     background-color: #D9D9D9;
     width: 65%;
     margin: 20px 0;
