--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -6,6 +6,7 @@
 }
 .post{
     display: block;
+    position: relative;
 }
 .home__posts{
     width: 65%;
@@ -80,8 +81,17 @@
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 60px;
+    height: 65px;
     font-size: 30px;
+}
+.post__footer-active{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 65px;
+    font-size: 30px;
+    border-bottom: 2px inset;
 }
 .post__like{
     width: 50%;
@@ -91,6 +101,7 @@
     align-items: center;
     border-right: 2px inset ;
     border-top: 2px inset;
+    margin-bottom: 2px;
 }
 .post__comment-icone{
     width: 50%;
@@ -100,6 +111,7 @@
     align-items: center;
     border-top: 2px inset;
     border-left: 2px inset;
+    margin-bottom: 2px;
     cursor: pointer;
 }
 .post__comment{
@@ -192,4 +204,46 @@
     width: 100%;
     margin: 20px;
     cursor: pointer;
+}
+.modify__post{
+    position: absolute;
+    left: 100%;
+    cursor: pointer;
+    font-size: 22px;
+}
+.modify__post-active{
+    display: flex;
+    justify-content: space-between;
+    height: 100px;
+    padding: 20px;
+    width: 97%;
+}
+.modify__post-form{
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+#modify__post{
+    height: 80px;
+    border-radius: 30px;
+    border: none;
+    font-size: 20px;
+    width: 131%;
+    padding-left: 25px;
+}
+.fa-solid.fa-xmark{
+    cursor: pointer;
+}
+.fa-ellipsis-vertical{
+    position: relative;
+    top: 20px;
+    right: 25px;
+}
+.modify__post-form form{
+    flex-direction: row;
+    display: flex;
+    width: 100%;
+}
+.modify__i{
+    font-size: 22px;
 }
