--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -247,3 +247,10 @@
 .modify__i{
     font-size: 22px;
 }
+.i__header{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+}
