--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -4,16 +4,15 @@ body{
 }
 /* ---------- Header ------------ */
 #header{
-    display: flex;
+    position: relative;
     background-color: #4E5166;
     height: 80px;
-    justify-content: space-between;
-    align-items: center;
     padding: 0 70px;
 }
 #header__logo{
     height: 100%;
-    position: relative;
+    position: absolute;
+    left: 50%;
 }
 .header__logo{
     width: 200px;
@@ -24,17 +23,36 @@ body{
 #header__profile{
     display: flex;
     justify-content: space-evenly;
-    width: 33%;
-}
-.header__messenger{
+    position: absolute;
+    left: 85%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     width: 25%;
 }
-#header__messenger,.header__profile{
-    font-size: 20px;
+.header__messenger{
+    top: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
     color: #4E5166;
     background-color: #D9D9D9;
-    padding: 15px;
+    padding: 0;
+    width: 50px;
     border-radius: 100%;
+    height: 50px;
+}
+#header__messenger,.header__profile{
+    color: #4E5166;
+    background-color: #D9D9D9;
+    padding: 0;
+    width: 50px;
+    border-radius: 100%;
+    height: 50px;
+    overflow: hidden;
+}
+.post__picture{
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
 }
 
 /* --------- Fin Header --------- */
