--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -9,6 +9,7 @@
     position: relative;
 }
 .home__posts{
+    position: relative;
     width: 65%;
     margin: 20px 0;
 }
@@ -207,8 +208,8 @@
 }
 .modify__post{
     position: absolute;
-    left: 100%;
-    cursor: pointer;
+    top: 10%;
+    left: 96%;
     font-size: 22px;
 }
 .modify__post-active{
@@ -234,11 +235,6 @@
 .fa-solid.fa-xmark{
     cursor: pointer;
 }
-.fa-ellipsis-vertical{
-    position: relative;
-    top: 20px;
-    right: 25px;
-}
 .modify__post-form form{
     flex-direction: row;
     display: flex;
@@ -246,6 +242,7 @@
 }
 .modify__i{
     font-size: 22px;
+    cursor: pointer;
 }
 .i__header{
     display: flex;
@@ -253,4 +250,53 @@
     width: 100%;
     height: 100%;
     align-items: center;
+}
+.modif__open{
+    width: 300%;
+}
+.modify__comment-active{
+    display: flex;
+    width: 300%;
+    margin: 25px;
+}
+.modify__comment-form{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+.modify__comment-form form{
+    display: flex;
+    width: 100%;
+}
+#modify__comment{
+    width: 100%;
+    height: 60px;
+    background-color: #fff;
+    border: none;
+    border-radius: 30px;
+    padding: 20px 15px;
+    font-size: 20px;
+}
+.delete__comment{
+    position: absolute;
+    right: 2%;
+    top: 50%;
+    cursor: pointer;
+    font-size: 20px;
+}
+.comment{
+    position: relative;
+}
+.delete__post{
+    position: absolute;
+    cursor: pointer;
+    right: -2%;
+    top: 20px;
+    font-size: 20px;
+}
+.modify__comment{
+    position: absolute;
+    top: 13%;
+    left: 98%;
+    font-size: 22px;
 }
