--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -208,7 +208,7 @@
 }
 .modify__post{
     position: absolute;
-    top: 10%;
+    top: 18px;
     left: 96%;
     font-size: 22px;
 }
@@ -300,3 +300,32 @@
     left: 98%;
     font-size: 22px;
 }
+.fa-heart{
+    cursor: pointer;
+}
+.flip-vertical-left {
+    background: -webkit-linear-gradient(180deg, rgba(255,215,215,1) 0%, rgba(253,45,1,1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: flip-vertical-left 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
+@keyframes flip-vertical-left {
+    0% {
+        -webkit-transform: rotateY(0);
+        transform: rotateY(0);
+        width: 0;
+    }
+    40% {
+        -webkit-transform: rotateY(-180deg);
+        transform: rotateY(-180deg);
+        width:  100%;
+      }
+    80% {
+        -webkit-transform: rotateY(-360deg);
+        transform: rotateY(-360deg);
+      }
+    100% {
+        -webkit-transform: rotateY(-540deg);
+        transform: rotateY(-540deg);
+      }
+  }
