--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,6 +1,11 @@
 body{
     margin: 0;
     background-color: #FFD7D7;
+    font-family: 'Lato', sans-serif;
+}
+input{
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
 }
 /* ---------- Header ------------ */
 #header{
@@ -47,6 +52,7 @@ body{
     width: 50px;
     border-radius: 100%;
     height: 50px;
+    cursor: pointer;
     overflow: hidden;
 }
 .post__picture{
