--- a/frontend/src/styles/messenger.css
+++ b/frontend/src/styles/messenger.css
@@ -1,5 +1,7 @@
 #messenger{
     display: flex;
+    min-height: 500px;
+    height: 100%;
 }
 .messenger__left{
     display: flex;
@@ -18,6 +20,7 @@
 }
 .messenger__discussion{
     display: flex;
+    cursor: pointer;
     width: 50%;
     margin: 20px 0;
 }
@@ -32,21 +35,23 @@
     overflow: hidden;
 }
 .messenger__discussion-name{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 130px;
     margin: 0px 30px;
     padding: 0px 50px;
     height: 100%;
-    display: flex;
-    align-items: center;
     background: #FFD7D7;
     border-radius: 30px;
 }
 .messenger__conversation{
-    width: 80%;
-    text-align: center;
-    background: #FFD7D7;
     height: 100%;
-    margin: 20px 0 40px;
+    margin: 30px 0 20px;
     border-radius: 30px;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    max-height: 375px;
 }
 .left{
     display: flex;
@@ -62,8 +67,35 @@
     margin: 10px 25px 10px 25px;
     padding: 20px;
     border-radius: 30px;
+    text-align: justify;
 }
-
 .messenger__conversation-bloc{
     width: 100%;
+}
+.messenger__right-bloc{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    text-align: center;
+    background: #FFD7D7;
+    height: 100%;
+    margin: 20px 0 40px;
+    border-radius: 30px;
+    max-height: 600px;
+    overflow: hidden;
+}
+.messenger__conversation-create{
+    margin-bottom: 10px;
+}
+#message{
+    border-radius: 30px;
+    border: none;
+    font-size: 20px;
+    height: 80px;
+    width: 75%;
+    padding-left: 25px;
+}
+#messenger__form{
+    display: flex;
+    justify-content: flex-end;
 }
