--- a/frontend/src/styles/messenger.css
+++ b/frontend/src/styles/messenger.css
@@ -13,7 +13,6 @@
 .messenger__right{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 100%;
     background-color: #4E5166;
@@ -40,7 +39,7 @@
     width: 100%;
     max-width: 130px;
     margin: 0px 30px;
-    padding: 0px 50px;
+    padding: 0px 40px;
     height: 100%;
     background: #FFD7D7;
     border-radius: 30px;
@@ -51,7 +50,6 @@
     border-radius: 30px;
     overflow-y: scroll;
     scroll-behavior: smooth;
-    max-height: 375px;
 }
 .left{
     display: flex;
@@ -75,6 +73,7 @@
 .messenger__right-bloc{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 80%;
     text-align: center;
     background: #FFD7D7;
@@ -98,4 +97,46 @@
 #messenger__form{
     display: flex;
     justify-content: flex-end;
+}
+#messenger__form-search{
+    display: flex;
+    height: 45px;
+    width: 50%;
+    margin-top: 20px;
+    justify-content: center;
+}
+#messenger__form-search input{
+    width: 100%;
+    padding: 0 20px;
+    border: none;
+    border-radius: 25px;
+    margin: 0;
+    max-width: 130px;
+    height: 40px;
+    cursor: pointer;
+}
+#messenger__form-search button{
+    height: 100%;
+    width: 40px;
+    border-radius: 100%;
+    border: none;
+    margin-left: 20px;
+    cursor: pointer;
+}
+.button__messenger-search{
+    width: 100%;
+    max-width: 200px;
+    margin: 0px 30px;
+    padding: 0px 40px;
+    height: 40px;
+    background: #FFD7D7;
+    border-radius: 30px;
+    border: none;
+    cursor: pointer;
+}
+.search__results{
+    margin: 20px 0 20px 0;
+    height: 200px;
+    width: 300px;
+    overflow-y: scroll;
 }
