--- a/frontend/src/styles/profile.css
+++ b/frontend/src/styles/profile.css
@@ -42,10 +42,10 @@
     width: 100%;
     height: 100%;
 }
-.user__img i{
-    font-size: 44px;
+.user__img>i{
+    font-size: 130px;
     position: absolute;
-    top: 88%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: #4E5166;
@@ -63,4 +63,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+#test{
+    font-size: 44px;
+    position: absolute;
+    top: 88%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #4E5166;
 }
