--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -62,7 +62,10 @@
 }
 .post__pseudo{
     font-weight: bold;
-    font-size: 20px;
+    font-size: 22px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .post__description{
     margin: 0 20px 10px 20px;
@@ -180,7 +183,7 @@
 #post__form{
     border-radius: 30px;
     border: none;
-    font-size: 20px;
+    font-size: 22px;
     height: 80px;
     width: 100%;
     padding-left: 25px;
@@ -318,6 +321,7 @@
 .footer__post-like,.footer__post-comment{
     width: 100%;
     text-align: center;
+    font-style: italic;
 }
 .fa-heart{
     cursor: pointer;
