--- a/frontend/src/styles/messenger.css
+++ b/frontend/src/styles/messenger.css
@@ -1,145 +1,160 @@
-#messenger{
-    display: flex;
-    min-height: 500px;
-    height: 100%;
+#messenger {
+   display: flex;
+   min-height: 500px;
+   height: 100%;
 }
-.messenger__left{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 70%;
-    background-color: #4E5166;
+.messenger__left {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 70%;
+   background-color: #4e5166;
 }
-.messenger__right{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    background-color: #4E5166;
+.messenger__right {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 100%;
+   background-color: #4e5166;
 }
-.messenger__discussion{
-    display: flex;
-    cursor: pointer;
-    width: 50%;
-    margin: 20px 0;
+.messenger__discussion {
+   display: flex;
+   cursor: pointer;
+   width: 65%;
+   margin: 20px 0;
 }
-.messenger__discussion-picture{
-    color: #4E5166;
-    background-color: #D9D9D9;
-    padding: 0;
-    width: 50px;
-    border-radius: 100%;
-    height: 50px;
-    cursor: pointer;
-    overflow: hidden;
+.messenger__discussion-picture {
+   color: #4e5166;
+   background-color: #d9d9d9;
+   padding: 0;
+   width: 50px;
+   border-radius: 100%;
+   height: 50px;
+   cursor: pointer;
+   overflow: hidden;
 }
-.messenger__discussion-name{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    max-width: 130px;
-    margin: 0px 30px;
-    padding: 0px 40px;
-    height: 100%;
-    background: #FFD7D7;
-    border-radius: 30px;
+.messenger__discussion-name {
+   display: flex;
+   align-items: center;
+   width: 100%;
+   max-width: 130px;
+   margin: 0px 30px;
+   padding: 0px 40px;
+   height: 100%;
+   background: #ffd7d7;
+   border-radius: 30px;
 }
-.messenger__conversation{
-    height: 100%;
-    margin: 30px 0 20px;
-    border-radius: 30px;
-    overflow-y: scroll;
-    scroll-behavior: smooth;
+.messenger__conversation {
+   height: 100%;
+   margin: 30px 0 20px;
+   border-radius: 30px;
+   overflow-y: scroll;
+   scroll-behavior: smooth;
 }
-.left{
-    display: flex;
-    justify-content: flex-start;
+.left {
+   display: flex;
+   justify-content: flex-start;
 }
-.right{
-    display: flex;
-    justify-content: flex-end;
+.right {
+   display: flex;
+   justify-content: flex-end;
 }
-.messenger__conversation-message{
-    max-width: 80%;
-    background: #D9D9D9;
-    margin: 10px 25px 10px 25px;
-    padding: 20px;
-    border-radius: 30px;
-    text-align: justify;
+.messenger__conversation-message {
+   max-width: 80%;
+   background: #d9d9d9;
+   margin: 10px 25px 10px 25px;
+   padding: 20px;
+   border-radius: 30px;
+   text-align: justify;
 }
-.messenger__conversation-bloc{
-    width: 100%;
+.messenger__conversation-bloc {
+   width: 100%;
 }
-.messenger__right-bloc{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 80%;
-    text-align: center;
-    background: #FFD7D7;
-    height: 100%;
-    margin: 20px 0 40px;
-    border-radius: 30px;
-    max-height: 600px;
-    overflow: hidden;
+.messenger__right-bloc {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   width: 80%;
+   text-align: center;
+   background: #ffd7d7;
+   height: 100%;
+   margin: 20px 0 40px;
+   border-radius: 30px;
+   max-height: 600px;
+   overflow: hidden;
 }
-.messenger__conversation-create{
-    margin-bottom: 10px;
+.messenger__conversation-create {
+   margin-bottom: 10px;
 }
-#message{
-    border-radius: 30px;
-    border: none;
-    font-size: 20px;
-    height: 80px;
-    width: 75%;
-    padding-left: 25px;
+#message {
+   border-radius: 30px;
+   border: none;
+   font-size: 20px;
+   height: 80px;
+   width: 75%;
+   padding-left: 25px;
 }
-#messenger__form{
-    display: flex;
-    justify-content: flex-end;
+#messenger__form {
+   display: flex;
+   justify-content: flex-end;
 }
-#messenger__form-search{
-    display: flex;
-    height: 45px;
-    width: 50%;
-    margin-top: 20px;
-    justify-content: center;
+#messenger__form-search {
+   display: flex;
+   height: 45px;
+   margin-top: 20px;
+   justify-content: center;
 }
-#messenger__form-search input{
-    width: 100%;
-    padding: 0 20px;
-    border: none;
-    border-radius: 25px;
-    margin: 0;
-    max-width: 130px;
-    height: 40px;
-    cursor: pointer;
+#messenger__form-search input {
+   width: 100%;
+   padding: 0 20px;
+   border: none;
+   border-radius: 25px;
+   margin: 0;
+   max-width: 130px;
+   height: 40px;
+   cursor: pointer;
 }
-#messenger__form-search button{
-    height: 100%;
-    width: 45px;
-    border-radius: 100%;
-    border: none;
-    margin-left: 20px;
-    cursor: pointer;
+#messenger__form-search button {
+   height: 100%;
+   width: 45px;
+   border-radius: 100%;
+   border: none;
+   margin-left: 20px;
+   cursor: pointer;
 }
-.button__messenger-search{
-    width: 100%;
-    max-width: 200px;
-    margin: 0px 30px;
-    padding: 0px 40px;
-    height: 40px;
-    background: #FFD7D7;
-    border-radius: 30px;
-    border: none;
-    cursor: pointer;
+.button__messenger-search {
+   width: 100%;
+   max-width: 200px;
+   margin: 0px 30px;
+   padding: 0px 40px;
+   height: 40px;
+   background: #ffd7d7;
+   border-radius: 30px;
+   border: none;
+   cursor: pointer;
 }
-.search__results{
-    margin: 20px 0 20px 0;
-    height: 200px;
-    width: 300px;
-    overflow-y: scroll;
+.search__results {
+   margin: 20px 0 20px 0;
+   height: 550px;
+   width: 300px;
+   overflow-y: scroll;
 }
-.post__pseudo + div{
-    font-style: italic;
+.post__pseudo + div {
+   font-style: italic;
+}
+.messenger__bloc-search {
+   width: 30%;
+   background-color: #4e5166;
+}
+.messenger__bloc-open {
+   background-color: #4e5166;
+}
+.looking {
+   border-radius: 100%;
+   padding: 15px;
+   margin: 40px;
+   border: none;
+   margin-left: 20px;
+   cursor: pointer;
+   background: #ffd7d7;
 }
