--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -1,354 +1,367 @@
-#home{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
+#home {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin-top: 20px;
 }
-.post{
-    display: block;
-    position: relative;
+.post {
+   display: block;
+   position: relative;
 }
-.home__posts{
-    position: relative;
-    width: 65%;
-    margin: 20px 0;
+.home__posts {
+   position: relative;
+   width: 65%;
+   margin: 20px 0;
 }
-.home__post{
-    background-color: #D9D9D9;
-    width: 100%;
-    border-radius: 35px;
+.home__post {
+   background-color: #d9d9d9;
+   width: 100%;
+   border-radius: 35px;
 }
-.create__post{
-    background-color: #D9D9D9;
-    width: 65%;
-    margin: 20px 0;
-    border-radius: 35px;
+.create__post {
+   background-color: #d9d9d9;
+   width: 65%;
+   margin: 20px 0;
+   border-radius: 35px;
 }
-.create__post{
-    display: flex;
-    flex-direction: row;
+.create__post {
+   display: flex;
+   flex-direction: row;
 }
-#create__post-form{
-    display: flex;
-    height: 100%;
-    margin: 20px;
+#create__post-form {
+   display: flex;
+   height: 100%;
+   margin: 20px;
 }
-.create__post-body{
-    width: 100%;
-    margin-block: auto;
+.create__post-body {
+   width: 100%;
+   margin-block: auto;
 }
-.post__header{
-    display: flex;
-    align-items: center;
+.post__header {
+   display: flex;
+   align-items: center;
 }
-.create__comment-header img,.create__comment-picture img,.post__header img,.comment__header img,.create__post-header img{
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    margin: 20px;
-    object-fit: cover;
+.create__comment-header img,
+.create__comment-picture img,
+.post__header img,
+.comment__header img,
+.create__post-header img {
+   width: 50px;
+   height: 50px;
+   border-radius: 100%;
+   margin: 20px;
+   object-fit: cover;
 }
-.create__comment-header i,.post__header i,.comment__header i,.create__post-header i{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    margin: 20px;
-    color:#D9D9D9;
-    background-color: #4E5166;
-    font-size: 20px;
+.create__comment-header i,
+.post__header i,
+.comment__header i,
+.create__post-header i {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 50px;
+   height: 50px;
+   border-radius: 100%;
+   margin: 20px;
+   color: #d9d9d9;
+   background-color: #4e5166;
+   font-size: 20px;
 }
-.post__pseudo{
-    font-weight: bold;
-    font-size: 22px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+.post__pseudo {
+   font-weight: bold;
+   font-size: 22px;
+   overflow: hidden;
+   white-space: nowrap;
+   text-overflow: ellipsis;
 }
-.post__description{
-    margin: 0 20px 10px 20px;
-    font-size: 20px;
-    text-align: justify;
+.post__description {
+   margin: 0 20px 10px 20px;
+   font-size: 20px;
+   text-align: justify;
 }
-.post__img{
-    margin: 20px 0 10px 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+.post__img {
+   margin: 20px 0 10px 0;
+   width: 100%;
+   display: flex;
+   justify-content: center;
 }
-.post__img img{
-    max-width: 90%;
-    max-height: 400px;
+.post__img img {
+   max-width: 90%;
+   max-height: 400px;
 }
-.post__footer{
-    display: flex;
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    height: 65px;
-    font-size: 30px;
+.post__footer {
+   display: flex;
+   align-items: center;
+   text-align: center;
+   width: 100%;
+   height: 65px;
+   font-size: 30px;
 }
-.post__footer-active{
-    display: flex;
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    height: 65px;
-    font-size: 30px;
-    border-bottom: 2px outset;
+.post__footer-active {
+   display: flex;
+   align-items: center;
+   text-align: center;
+   width: 100%;
+   height: 65px;
+   font-size: 30px;
+   border-bottom: 2px outset;
 }
-.post__like{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 2px inset;
-    margin-bottom: 2px;
+.post__like {
+   width: 50%;
+   height: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border-top: 2px inset;
+   margin-bottom: 2px;
 }
-.post__comment-icone{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 2px inset;
-    border-left: 2px inset;
-    margin-bottom: 2px;
-    cursor: pointer;
+.post__comment-icone {
+   width: 50%;
+   height: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border-top: 2px inset;
+   border-left: 2px inset;
+   margin-bottom: 2px;
+   cursor: pointer;
 }
-.post__comment{
-    border-top: 2px inset;
+.post__comment {
+   border-top: 2px inset;
 }
-.comment__post{
-    display: flex;
+.comment__post {
+   display: flex;
 }
-.comment__header{
-    width: 20%;
-    max-width: 95px;
+.comment__header {
+   width: 20%;
+   max-width: 95px;
 }
-.comment__like{
-    width: 20%;
-    max-width: 95px;
-    text-align: center;
-    margin-top: 20px;
-    font-size: 25px;
+.comment__like {
+   width: 20%;
+   max-width: 95px;
+   text-align: center;
+   margin-top: 20px;
+   font-size: 25px;
 }
-.comment__middle{
-    width: 100%;
-    background-color: #FFF;
-    border-radius: 30px;
-    font-size: 20px;
-    margin: 20px 0 20px 0;
-    padding: 20px 15px;
+.comment__middle {
+   width: 100%;
+   background-color: #fff;
+   border-radius: 30px;
+   font-size: 20px;
+   margin: 20px 0 20px 0;
+   padding: 20px 15px;
 }
-.comment__middle-head{
-    display: flex;
-    justify-content: space-between;
+.comment__middle-head {
+   display: flex;
+   justify-content: space-between;
 }
-.comment__middle-body{
-    margin:15px 20px 0 0
+.comment__middle-body {
+   margin: 15px 20px 0 0;
 }
-#post__comment-form{
-    display: flex;
+#post__comment-form {
+   display: flex;
 }
-.create__comment-picture{
-    display: flex;
-    flex-direction: row;
+.create__comment-picture {
+   display: flex;
+   flex-direction: row;
 }
-#text{
-    width: 100%;
-    background-color: #fff;
-    border: none;
-    border-radius: 30px;
-    margin: 20px 0 20px 0;
-    padding: 20px 15px;
-    font-size: 20px;
+#text {
+   width: 100%;
+   background-color: #fff;
+   border: none;
+   border-radius: 30px;
+   margin: 20px 0 20px 0;
+   padding: 20px 15px;
+   font-size: 20px;
 }
-.create__comment-body{
-    width: 100%;
+.create__comment-body {
+   width: 100%;
 }
-.submit__plane{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 70px;
-    height: 55px;
-    margin: 20px;
-    font-size: 30px;
-    cursor: pointer;
+.submit__plane {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 70px;
+   height: 55px;
+   margin: 20px;
+   font-size: 30px;
+   cursor: pointer;
 }
-#post__form{
-    border-radius: 30px;
-    border: none;
-    font-size: 22px;
-    height: 80px;
-    width: 100%;
-    padding-left: 25px;
+#post__form {
+   border-radius: 30px;
+   border: none;
+   font-size: 22px;
+   height: 80px;
+   width: 100%;
+   padding-left: 25px;
 }
-.post__preview-img{
-    margin: 20px 0 20px 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+.post__preview-img {
+   margin: 20px 0 20px 0;
+   width: 100%;
+   display: flex;
+   justify-content: center;
 }
-.post__preview-img img{
-    max-width: 90%;
-    max-height: 400px;
+.post__preview-img img {
+   max-width: 90%;
+   max-height: 400px;
 }
-.button__img{
-    width: 5%;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    font-size: 25px;
+.button__img {
+   width: 5%;
+   display: flex;
+   align-items: center;
+   text-align: center;
+   font-size: 25px;
 }
-.button__img label{
-    width: 100%;
-    margin: 20px;
-    cursor: pointer;
+.button__img label {
+   width: 100%;
+   margin: 20px;
+   cursor: pointer;
 }
-.modify__post{
-    position: absolute;
-    top: 18px;
-    left: 96%;
-    font-size: 22px;
+.modify__post {
+   position: absolute;
+   top: 18px;
+   left: 96%;
+   font-size: 22px;
 }
-.modify__post-active{
-    display: flex;
-    justify-content: space-between;
-    height: 100px;
-    padding: 20px;
-    width: 97%;
+.modify__post-active {
+   display: flex;
+   justify-content: space-between;
+   height: 100px;
+   padding: 20px;
+   width: 97%;
 }
-.modify__post-form{
-    display: flex;
-    align-items: center;
-    width: 100%;
+.modify__post-form {
+   display: flex;
+   align-items: center;
+   width: 100%;
 }
-#modify__post{
-    height: 80px;
-    border-radius: 30px;
-    border: none;
-    font-size: 20px;
-    width: 131%;
-    padding-left: 25px;
+#modify__post {
+   height: 80px;
+   border-radius: 30px;
+   border: none;
+   font-size: 20px;
+   width: 131%;
+   padding-left: 25px;
 }
-.fa-solid.fa-xmark{
-    cursor: pointer;
+.fa-solid.fa-xmark {
+   cursor: pointer;
 }
-.modify__post-form form{
-    flex-direction: row;
-    display: flex;
-    width: 100%;
+.modify__post-form form {
+   flex-direction: row;
+   display: flex;
+   width: 100%;
 }
-.modify__i{
-    font-size: 22px;
-    cursor: pointer;
+.modify__i {
+   font-size: 22px;
+   cursor: pointer;
 }
-.i__header{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    align-items: center;
+.i__header {
+   color: #4e5166;
+   border-radius: 100%;
+   padding: 15px;
+   border: none;
+   cursor: pointer;
+   background: #ffd7d7;
 }
-.modif__open{
-    width: 300%;
+.modif__open {
+   width: 300%;
 }
-.modify__comment-active{
-    display: flex;
-    width: 300%;
-    margin: 25px;
+.modify__comment-active {
+   display: flex;
+   width: 300%;
+   margin: 25px;
 }
-.modify__comment-form{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
+.modify__comment-form {
+   display: flex;
+   flex-direction: row;
+   width: 100%;
 }
-.modify__comment-form form{
-    display: flex;
-    width: 100%;
+.modify__comment-form form {
+   display: flex;
+   width: 100%;
 }
-#modify__comment{
-    width: 100%;
-    height: 60px;
-    background-color: #fff;
-    border: none;
-    border-radius: 30px;
-    padding: 20px 15px;
-    font-size: 20px;
+#modify__comment {
+   width: 100%;
+   height: 60px;
+   background-color: #fff;
+   border: none;
+   border-radius: 30px;
+   padding: 20px 15px;
+   font-size: 20px;
 }
-.delete__comment{
-    position: absolute;
-    right: 3.3%;
-    top: 70px;
-    cursor: pointer;
-    font-size: 20px;
+.delete__comment {
+   position: absolute;
+   right: 3.3%;
+   top: 70px;
+   cursor: pointer;
+   font-size: 20px;
 }
-.comment{
-    position: relative;
+.comment {
+   position: relative;
 }
-.delete__post{
-    position: absolute;
-    cursor: pointer;
-    right: -3%;
-    top: 20px;
-    font-size: 20px;
+.delete__post {
+   position: absolute;
+   cursor: pointer;
+   right: -3%;
+   top: 20px;
+   font-size: 20px;
 }
-.modify__comment{
-    position: absolute;
-    top: 35px;
-    left: 95%;
-    font-size: 22px;
+.modify__comment {
+   position: absolute;
+   top: 35px;
+   left: 95%;
+   font-size: 22px;
 }
-.modif__close{
-    width: 10%;
-    max-width: 95px;
-    text-align: center;
-    margin-top: 20px;
-    font-size: 25px;
+.modif__close {
+   width: 10%;
+   max-width: 95px;
+   text-align: center;
+   margin-top: 20px;
+   font-size: 25px;
 }
-.footer__post-like-comment{
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-    font-size: 20px;
-    margin: 20px 0 10px 0;
+.footer__post-like-comment {
+   display: flex;
+   width: 100%;
+   justify-content: space-around;
+   font-size: 20px;
+   margin: 20px 0 10px 0;
 }
-.footer__post-like,.footer__post-comment{
-    width: 100%;
-    text-align: center;
-    font-style: italic;
+.footer__post-like,
+.footer__post-comment {
+   width: 100%;
+   text-align: center;
+   font-style: italic;
 }
-.fa-heart{
-    cursor: pointer;
+.fa-heart {
+   cursor: pointer;
 }
 .flip-vertical-left {
-    background: -webkit-linear-gradient(180deg, rgba(255,215,215,1) 0%, rgba(253,45,1,1) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: flip-vertical-left 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+   background: -webkit-linear-gradient(
+      180deg,
+      rgba(255, 215, 215, 1) 0%,
+      rgba(253, 45, 1, 1) 100%
+   );
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+   animation: flip-vertical-left 1s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
 }
 @keyframes flip-vertical-left {
-    0% {
-        -webkit-transform: rotateY(0);
-        transform: rotateY(0);
-        width: 0;
-    }
-    40% {
-        -webkit-transform: rotateY(-180deg);
-        transform: rotateY(-180deg);
-        width:  100%;
-      }
-    80% {
-        -webkit-transform: rotateY(-360deg);
-        transform: rotateY(-360deg);
-      }
-    100% {
-        -webkit-transform: rotateY(-540deg);
-        transform: rotateY(-540deg);
-      }
-  }
+   0% {
+      -webkit-transform: rotateY(0);
+      transform: rotateY(0);
+      width: 0;
+   }
+   40% {
+      -webkit-transform: rotateY(-180deg);
+      transform: rotateY(-180deg);
+      width: 100%;
+   }
+   80% {
+      -webkit-transform: rotateY(-360deg);
+      transform: rotateY(-360deg);
+   }
+   100% {
+      -webkit-transform: rotateY(-540deg);
+      transform: rotateY(-540deg);
+   }
+}
